--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                      </ol>
-                     <div class="carousel-inner" style="margin-top: -180px; height: 600px;">
+                     <div class="carousel-inner" style="margin-top: -180px; height: auto;">
                         <div class="carousel-item active">
                            <div class="container-max">
                               <div class="carousel-caption relative">
@@ -157,14 +157,10 @@
       <div  class="about">
          <div class="container">
             <div class="row d_flex d_grid">
-               <div class="col-md-6">
-                  <div class="about_img">
-                     <figure><img class="img_responsive" src="images/pic2.jpeg" alt="#"/></figure>
-                  </div>
-               </div>
+               
                <div class="col-md-5 offset-md-1 order_1_mobile">
                   <div class="titlepage text_align_left">
-                       <h2>About cctv</h2>
+                       <h2>About Fabric Dye</h2>
                         <p>SIMPLY BLACK DYE is here to help you restore the color of your clothes back to life. We believe that everyone 
                            deserves to feel good about themselves, and we know that sometimes it can be hard to find clothes that fit you 
                            well and make you look amazing. Our team is dedicated to helping you feel confident in your own skin—no matter 
@@ -174,6 +170,11 @@
                            clothing from fading away forever. We want everyone out there to know that they can trust us with their 
                            closet—and we're going to keep working until everyone knows it</p>
                        <!-- <a class="read_more" href="about.html">Read More</a> -->
+                  </div>
+               </div>
+               <div class="col-md-6">
+                  <div class="about_img">
+                     <figure><img class="img_responsive" src="images/pic2.jpeg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -186,7 +187,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>Our CCTV Cameras</h2>
+                     <h2>Our Products</h2>
                   </div>
                </div>
             </div>
@@ -260,6 +261,11 @@
            </div>
             <div class="row d_flex">
                <div class="col-md-6">
+                  <div class="contact_img">
+                    <figure><img src="images/pic4.jpeg" alt="#" /></figure>
+                  </div>
+                </div>
+               <div class="col-md-6">
                   <form id="request" class="main_form">
                      <div class="row">
                         <div class="col-md-12 ">
@@ -280,11 +286,7 @@
                      </div>
                   </form>
                </div>
-               <div class="col-md-6">
-                 <div class="contact_img">
-                   <figure><img src="images/pic4.jpeg" alt="#" /></figure>
-                 </div>
-               </div>
+              
             </div>
          </div>
       </div>
@@ -351,7 +353,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
-                        <p>© 2022 All Rights Reserved. Design by  <a href="https://html.design/"> Speckulate Technologies</a></p>
+                        <p>© 2022 All Rights Reserved. Design by  <a href="http://speckulate-technologies.co.za/"> Speckulate Technologies</a></p>
                      </div>
                   </div>
                </div>
