--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <div class="col-sm-3">
                      <div class="logo" style="height: 100px;">
                         <!-- <a href="index.html">Qiniso</a> -->
-                        <img src="images/pic4.jpeg" style="height: 100%;"/>
+                        <img src="images/logo.jpeg" style="height: 100%;"/>
                      </div>
                   </div>
                   <div class="col-sm-9">
