--- a/index.html
+++ b/index.html
@@ -307,15 +307,10 @@
                   </div>
                </div>
            </div>
-            <div class="row d_flex">
-               <div class="col-md-6">
-                  <div class="contact_img">
-                    <figure><img src="images/pic4.jpeg" alt="#" /></figure>
-                  </div>
-                </div>
-               <div class="col-md-6">
-                  <form id="request" class="main_form">
-                     <div class="row">
+            <div class="row d_flex" style="width: 200%;">
+               <div class="col-md-6" style="width: 100%;">
+                  <form id="request" class="main_form" style="width: 100%;">
+                     <div class="row" >
                         <div class="col-md-12 ">
                            <input class="contactus" placeholder="Name" type="type" name=" Name"> 
                         </div>
