--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@
                               <figure><img src="images/pic10.jpeg" alt="#"/></figure>
                               </div>
                            </div>
-      
                         </div>
                      </div>
                   </div>
@@ -247,7 +246,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Black Dye</h3>
-                           <a class="read_more" href="cameras.html">Place Order</a>
+                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -257,7 +256,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Blue Dye</h3>
-                           <a class="read_more" href="cameras.html">Place Order</a>
+                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -267,7 +266,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Navy Dye</h3>
-                           <a class="read_more" href="cameras.html">Place Order</a>
+                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -277,7 +276,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Grey Dye</h3>
-                           <a class="read_more" href="cameras.html">Place Order</a>
+                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -287,7 +286,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Olive Green Dye</h3>
-                           <a class="read_more" href="cameras.html">Place Order</a>
+                           <a class="read_more" href="contact.html">Place Order</a>
                         </div>
                      </div>
 
