--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Black Dye</h3>
-                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
+                           <a class="read_more" href="contact.html">Place Order</a>
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -256,7 +256,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Blue Dye</h3>
-                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
+                           <a class="read_more" href="contact.html">Place Order</a>
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -266,7 +266,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Navy Dye</h3>
-                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
+                           <a class="read_more" href="contact.html">Place Order</a>
                         </div>
                      </div>
                      <div class="col-md-4">
@@ -276,7 +276,7 @@
                             </div>
                             <p>Price<br><span>R99.99</span></p>
                            <h3>Fabric Grey Dye</h3>
-                           <!-- <a class="read_more" href="cameras.html">Place Order</a> -->
+                           <a class="read_more" href="contact.html">Place Order</a>
                         </div>
                      </div>
                      <div class="col-md-4">
