--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <div class="col-sm-3">
                      <div class="logo" style="height: 100px;">
                         <!-- <a href="index.html">Qiniso</a> -->
-                        <img src="images/logo.jpeg" style="height: 100%;"/>
+                        <img src="images/logo.png" style="height: 120%;"/>
                      </div>
                   </div>
                   <div class="col-sm-9">
@@ -306,8 +306,8 @@
                   </div>
                </div>
            </div>
-            <div class="row d_flex" style="width: 200%;">
-               <div class="col-md-6" style="width: 100%;">
+            <div class="titlepage text_align_center" style="width: 100%; text-align: center;">
+               <div class="titlepage text_align_center" style="width: 100%;">
                   <form id="request" class="main_form" style="width: 100%;">
                      <div class="row" >
                         <div class="col-md-12 ">
@@ -328,7 +328,6 @@
                      </div>
                   </form>
                </div>
-              
             </div>
          </div>
       </div>
