--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
    <!-- body -->
-   <body class="main-layout inner_page">
+   <body class="main-layout inner_page" style="background-color: black;">
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="images/loading.gif" alt="" /></div>
@@ -42,15 +42,15 @@
       </div>
       <div class="padd_30">
       <!-- header -->
-      <header>
+      <header style="background-color: black;">
          <!-- header inner -->
-         <div class="head-top">
+         <div class="head-top" style="background-color: black;">
             <div class="container-fluid">
                <div class="row">
                   <div class="col-sm-3">
                      <div class="logo">
                         <!-- <a href="index.html">Zlymo</a> -->
-                        <img src="images/logo.jpeg" style="height: 100%;"/>
+                        <img src="images/logo.png" style="height: 100%;"/>
                      </div>
                   </div>
                   <div class="col-sm-9">
@@ -65,17 +65,17 @@
       <!-- end header -->
       </div>
       <!-- contact -->
-      <div class="contact">
-         <div class="container" style="margin-top: -100px;">
+      <div class="contact" style="background-color: black;">
+         <div class="container" style="margin-top: -50px;">
            <div class="row">
              <div class="col-md-12">
-                  <div class="titlepage text_align_center">
-                     <h2>Place Order</h2>
+               <div class="titlepage text_align_center">
+                     <h2 style="color: white; margin-top: -100px;">Place Order</h2>
                   </div>
                </div>
            </div>
-            <div class="row d_flex" style="width: 200%;">
-               <div class="col-md-6" style="width: 100%;">
+            <div class="titlepage text_align_center" style="width: 100%; text-align: center;">
+               <div class="titlepage text_align_center" style="width: 100%;">
                   <form id="request" class="main_form" style="width: 100%;">
                      <div class="row" >
                         <div class="col-md-12 ">
@@ -96,13 +96,12 @@
                      </div>
                   </form>
                </div>
-              
             </div>
          </div>
       </div>
       <!-- contact -->
       <!-- footer -->
-      <footer>
+      <footer style="margin-top: -200px;">
          <div class="footer">
             <div class="container" style="margin-top: -120px; height: 150px;">
                <div class="row">
