--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
    <!-- body -->
-   <body class="main-layout">
+   <body class="main-layout" style="background-color: black;">
       <!-- loader  -->
       <div class="loader_bg">
          <div class="loader"><img src="images/loading.gif" alt="" /></div>
@@ -65,7 +65,7 @@
       </header>
       <!-- end header -->
       <!-- start slider section -->
-      <div  class=" banner_main">
+      <div  class=" banner_main" style="background-color: black;">
                   <div id="myCarousel" class="carousel slide" data-ride="carousel">
                      <ol class="carousel-indicators">
                         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -79,7 +79,7 @@
                                 <div class="row">
                                    <div class="col-md-6">
                                      <div class="bluid">
-                                      <h3 style="color: white; font-size: 20px; margin-top: 100px;"><span>Do you remember the first time you dyed your hair black?
+                                      <h3 style="color: white; font-size: 20px; margin-top: 100px;"><span>Do you remember the first time you dyed your jeans or fabrics black?
                                        It's hard to forget that feeling: the excitement, the fear, and the rush of adrenaline as you looked in the mirror for 
                                        the first time. You felt like a superhero, ready to take on anything that came your way.</span></h3>
 
@@ -97,71 +97,30 @@
                               </div>
                            </div>
                         </div>
-                        <!-- <div class="carousel-item">
-                           <div class="container-max">
-                              <div class="carousel-caption relative">
-                               <div class="row">
-                                   <div class="col-md-6">
-                                     <div class="bluid">
-                                      <h1>Security  <br><span>Anywhere CCTV
-                                       Camera</span></h1>
-                                      <a class="read_more" href="Javascript:void(0)">Read More </a>
-                                      <a class="read_more" href="contact.html">Contact Us </a>
-                                     </div>
-                                   </div>
-                                   <div class="col-md-6">
-                                      <div class="pan_img">
-                                         <figure><img src="images/top_img.png" alt="#"/></figure>
-                                      </div>
-                                   </div>
-                                </div>
-                              </div>
-                           </div>
-                        </div> -->
-                        <!-- <div class="carousel-item">
-                           <div class="container-max">
-                              <div class="carousel-caption relative">
-                                <div class="row">
-                                   <div class="col-md-6">
-                                     <div class="bluid">
-                                      <h1>Security  <br><span>Anywhere CCTV
-                                       Camera</span></h1>
-                                      <a class="read_more" href="Javascript:void(0)">Read More </a>
-                                      <a class="read_more" href="contact.html">Contact Us </a>
-                                     </div>
-                                   </div>
-                                   <div class="col-md-6">
-                                      <div class="pan_img">
-                                         <figure><img src="images/top_img.png" alt="#"/></figure>
-                                      </div>
-                                   </div>
-                                </div>
-                              </div>
-                           </div>
-                        </div> -->
+
                      </div>
-                     <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                     <!-- <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                      <i class="fa fa-angle-left" aria-hidden="true"></i>
                      <span class="sr-only">Previous</span>
                      </a>
                      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
                      <i class="fa fa-angle-right" aria-hidden="true"></i>
                      <span class="sr-only">Next</span>
-                     </a>
+                     </a> -->
                   </div>
               </div>
             </div>
       </div>
       <!-- end slider section -->
       <!-- about -->
-      <div  class="about">
+      <div  class="about" style="background-color: black;">
          <div class="container">
             <div class="row d_flex d_grid">
                
                <div class="col-md-5 offset-md-1 order_1_mobile">
                   <div class="titlepage text_align_left">
-                       <h2>About Fabric Dye</h2>
-                        <p>SIMPLY BLACK DYE is here to help you restore the color of your clothes back to life. We believe that everyone 
+                       <h2 style="color: white; margin-top: -100px;">About Simple Black Dye</h2>
+                        <p style="color: white;">SIMPLY BLACK DYE is here to help you restore the color of your clothes back to life. We believe that everyone 
                            deserves to feel good about themselves, and we know that sometimes it can be hard to find clothes that fit you 
                            well and make you look amazing. Our team is dedicated to helping you feel confident in your own skin—no matter 
                            what it looks like. We're not just here for your favorite pair of jeans or your go-to dress; we're here for all 
@@ -182,12 +141,12 @@
       </div>
       <!-- end about -->
             <!-- cameras -->
-            <div class="cameras" style="margin-top: -200px;">
+            <div class="cameras" style="margin-top: -200px; background-color: black;">
                <div class="container-max">
                   <div class="row">
                      <div class="col-md-12">
                         <div class="titlepage text_align_center">
-                           <h2>Gallery</h2>
+                           <h2 style="color: white;">Gallery</h2>
                         </div>
                      </div>
                   </div>
@@ -229,12 +188,12 @@
             </div>
             <!-- end cameras -->
       <!-- cameras -->
-      <div class="cameras" style="margin-top: -150px;">
+      <div class="cameras" style="margin-top: -150px; background-color: black;">
          <div class="container-max">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>Our Products</h2>
+                     <h2 style="color: white;">Our Products</h2>
                   </div>
                </div>
             </div>
@@ -297,12 +256,12 @@
       </div>
       <!-- end cameras -->
       <!-- contact -->
-      <div class="contact" style="margin-top: -150px;">
+      <div class="contact" style="margin-top: -150px; background-color: black;">
          <div class="container">
            <div class="row">
              <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>Place Order</h2>
+                     <h2 style="color: white;">Place Order</h2>
                   </div>
                </div>
            </div>
@@ -333,7 +292,7 @@
       </div>
       <!-- contact -->
       <!-- footer -->
-      <footer>
+      <footer style="margin-top: -200px;">
          <div class="footer">
             <div class="container" style="margin-top: -120px; height: 150px;">
                <div class="row">
