--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="padd_30">
       <div class="full_bf">
       <!-- header -->
-      <header>
+      <header style="background-color: black;">
          <!-- header inner -->
          <div class="head-top">
             <div class="container-fluid">
@@ -51,7 +51,7 @@
                   <div class="col-sm-3">
                      <div class="logo" style="height: 100px;">
                         <!-- <a href="index.html">Qiniso</a> -->
-                        <img src="images/logo.png" style="height: 120%;"/>
+                        <img src="images/logo.png" />
                      </div>
                   </div>
                   <div class="col-sm-9">
@@ -72,7 +72,7 @@
                         <li data-target="#myCarousel" data-slide-to="1"></li>
                         <li data-target="#myCarousel" data-slide-to="2"></li>
                      </ol>
-                     <div class="carousel-inner" style="margin-top: -180px; height: auto;">
+                     <div class="carousel-inner" style="margin-top: -130px; height: auto;">
                         <div class="carousel-item active">
                            <div class="container-max">
                               <div class="carousel-caption relative">
