--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                            <li> <a href="Javascript:void(0)"><i class="fa fa-phone" aria-hidden="true"></i> +27 76 964 9975 (JHB)
                            </a>
                         </li>
-                           <li> <a href="Javascript:void(0)"> <i class="fa fa-envelope" aria-hidden="true"></i> dumisaqiniso5@gmail.com
+                           <li> <a href="Javascript:void(0)"> <i class="fa fa-envelope" aria-hidden="true"></i> simplyblackdye@gmail.com
                               </a>
                            </li>
                            <li> <a href="Javascript:void(0)"> <i class="fa fa-envelope" aria-hidden="true"></i> 511 Griffiths Mxgenge Highway 
