--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                
                <div class="col-md-5 offset-md-1 order_1_mobile">
                   <div class="titlepage text_align_left">
-                       <h2 style="color: white; margin-top: -100px;">About Simple Black Dye</h2>
+                       <h2 style="color: white; margin-top: -100px;">About Simply Black Dye</h2>
                         <p style="color: white;">SIMPLY BLACK DYE is here to help you restore the color of your clothes back to life. We believe that everyone 
                            deserves to feel good about themselves, and we know that sometimes it can be hard to find clothes that fit you 
                            well and make you look amazing. Our team is dedicated to helping you feel confident in your own skin—no matter 
@@ -151,11 +151,11 @@
                      </div>
                   </div>
                         <div class="row">
-                           <div class="col-md-4">
+                           <!-- <div class="col-md-4">
                               <div class="cameras_img text_align_center">
                               <figure><img src="images/pic5.jpeg" alt="#"/></figure>
                               </div>
-                           </div>
+                           </div> -->
                            <div class="col-md-4">
                               <div class="cameras_img text_align_center">
                               <figure><img src="images/pic6.jpeg" alt="#"/></figure>
@@ -166,7 +166,7 @@
                               <figure><img src="images/pic7.jpeg" alt="#"/></figure>
                               </div>
                            </div>
-                           <div class="col-md-4">
+                           <!-- <div class="col-md-4">
                               <div class="cameras_img text_align_center">
                               <figure><img src="images/pic8.jpeg" alt="#"/></figure>
                               </div>
@@ -175,7 +175,7 @@
                               <div class="cameras_img text_align_center">
                               <figure><img src="images/pic9.jpeg" alt="#"/></figure>
                               </div>
-                           </div>
+                           </div> -->
                            <div class="col-md-4">
                               <div class="cameras_img text_align_center">
                               <figure><img src="images/pic10.jpeg" alt="#"/></figure>
