--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                        It's hard to forget that feeling: the excitement, the fear, and the rush of adrenaline as you looked in the mirror for 
                                        the first time. You felt like a superhero, ready to take on anything that came your way.</span></h3>
 
-                                       <h3 style="color: white; font-size: 20px;"><br><span>You may have dyed your hair a million times since then, but we bet there's 
+                                       <h3 style="color: white; font-size: 20px;"><br><span>You may have dyed your jeans or fabrics a million times since then, but we bet there's 
                                           one thing that hasn't changed: that feeling! And now we're offering it up to you again in our new Simply Black dye—a touch-up 
                                           kit designed to bring back your confidence and make sure you feel like a badass every day</span></h3>
                                      </div>
