--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                                        <h3 style="color: white; font-size: 20px;"><br><span>You may have dyed your jeans or fabrics a million times since then, but we bet there's 
                                           one thing that hasn't changed: that feeling! And now we're offering it up to you again in our new Simply Black dye—a touch-up 
-                                          kit designed to bring back your confidence and make sure you feel like a badass every day</span></h3>
+                                          kit designed to bring back your confidence and make sure you feel like a happy every day.</span></h3>
                                      </div>
                                    </div>
                                    <div class="col-md-6" style="margin-top: 50px;">
@@ -333,7 +333,7 @@
                            <li> <a href="Javascript:void(0)"> <i class="fa fa-envelope" aria-hidden="true"></i> simplyblackdye@gmail.com
                               </a>
                            </li>
-                           <li> <a href="Javascript:void(0)"> <i class="fa fa-envelope" aria-hidden="true"></i> 511 Griffiths Mxgenge Highway 
+                           <li> <a href="Javascript:void(0)"> <i class="fa fa-envelope" aria-hidden="true"></i> 511 Griffiths Mxenge Highway 
                            </a>
                         </li>
                         </ul>
