--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
                         </div>
                      </div>
                      
-                     <div class="col-md-4">
+                     <!-- <div class="col-md-4">
                         <div class="cameras_img text_align_center">
                         <figure><img src="images/pic10.jpeg" alt="#"/></figure>
                         </div>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
